[gd_scene load_steps=5 format=3 uid="uid://dsny12w51oug"]

[ext_resource type="Texture2D" uid="uid://fgqi6qacmfb" path="res://assets/sprites/enemy-sprites/ScyphozoaRex-boss.svg" id="1_02kra"]
[ext_resource type="Script" uid="uid://cg03geo4ll3ts" path="res://scripts/enemy-scripts/scyphozoa_rex/scyphozoa_rex_boss.gd" id="1_61tw5"]
[ext_resource type="Script" uid="uid://cmrcb8ek8yiff" path="res://scripts/enemy-scripts/scyphozoa_rex/ScyphozoaRex_animations.gd" id="2_7lu5h"]

[sub_resource type="Curve" id="Curve_7lu5h"]
_limits = [0.0, 4.0, 0.0, 1.0]
_data = [Vector2(0, 4), 0.0, 0.0, 0, 0, Vector2(1, 0.808989), 0.0, 0.0, 0, 0]
point_count = 2

[node name="ScyphozoaRex-boss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_61tw5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
z_index = -2
polygon = PackedVector2Array(0, -204, -153, -85, -442, 17, -680, 68, -697, 85, -697, 119, -663, 153, -357, 238, -272, 204, -153, 170, -51, 153, 51, 153, 153, 170, 272, 204, 340, 238, 663, 153, 697, 119, 697, 85, 646, 51, 408, 17, 170, -85)

[node name="Node2D_visuals" type="Node2D" parent="."]
script = ExtResource("2_7lu5h")

[node name="Sprite2D_pupil" type="Sprite2D" parent="Node2D_visuals"]
z_index = 4
texture_filter = 4
texture = ExtResource("1_02kra")
offset = Vector2(0, 34)
region_enabled = true
region_rect = Rect2(1807, 517, 94, 94)

[node name="Marker2D_projectile" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil"]
position = Vector2(0, 34)

[node name="Node2D_attack" type="Node2D" parent="Node2D_visuals/Sprite2D_pupil"]

[node name="Node2D_pattern1" type="Node2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack"]
position = Vector2(-1233, 1269)
scale = Vector2(5, 5)

[node name="Marker2D1" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern1"]

[node name="Marker2D11" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern1"]
position = Vector2(493.2, -1.52588e-05)

[node name="Marker2D3" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern1"]
position = Vector2(102.6, 0)

[node name="Marker2D5" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern1"]
position = Vector2(203.4, -1.52588e-05)

[node name="Marker2D7" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern1"]
position = Vector2(289.8, -1.52588e-05)

[node name="Marker2D9" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern1"]
position = Vector2(390.6, -1.52588e-05)

[node name="Node2D_pattern2" type="Node2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack"]
position = Vector2(-1233, 1269)
scale = Vector2(5, 5)

[node name="Marker2D6" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern2"]
position = Vector2(246.6, 0)

[node name="Marker2D2" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern2"]
position = Vector2(52.2, -1.52588e-05)

[node name="Marker2D4" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern2"]
position = Vector2(153, 0)

[node name="Marker2D8" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern2"]
position = Vector2(340.2, 0)

[node name="Marker2D10" type="Marker2D" parent="Node2D_visuals/Sprite2D_pupil/Node2D_attack/Node2D_pattern2"]
position = Vector2(441, 0)

[node name="Sprite2D_eye" type="Sprite2D" parent="Node2D_visuals"]
self_modulate = Color(1.35, 1.35, 1.35, 1)
z_index = 3
texture_filter = 2
texture = ExtResource("1_02kra")
region_enabled = true
region_rect = Rect2(64, 709, 194, 194)

[node name="Sprite2D_body" type="Sprite2D" parent="Node2D_visuals"]
z_index = 2
texture_filter = 2
texture = ExtResource("1_02kra")
offset = Vector2(0, 22)
region_enabled = true
region_rect = Rect2(43, 34, 1404, 437)

[node name="Sprite2D_tentacle_left" type="Sprite2D" parent="Node2D_visuals"]
z_index = -100
texture_filter = 2
position = Vector2(-340, 238)
texture = ExtResource("1_02kra")
offset = Vector2(-97, 276)
region_enabled = true
region_rect = Rect2(1552, 64, 235, 573)

[node name="Sprite2D_tentacle_right" type="Sprite2D" parent="Node2D_visuals"]
z_index = -100
texture_filter = 2
position = Vector2(340, 238)
texture = ExtResource("1_02kra")
offset = Vector2(95, 276)
flip_h = true
region_enabled = true
region_rect = Rect2(1552, 64, 235, 573)

[node name="Node2D_Lines_tentacles" type="Node2D" parent="Node2D_visuals"]
z_index = -2

[node name="Node2D_left_side" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles"]

[node name="Node2D_tentacle1_left" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side"]
z_index = -4

[node name="Line2D_outline" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle1_left"]
z_index = -1
points = PackedVector2Array(-270, 180)
width = 25.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.501991, 0.191443, 0.330004, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle1_left"]
points = PackedVector2Array(-270, 180)
width = 15.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.776471, 0.356863, 0.537255, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D_end" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle1_left"]
position = Vector2(-289, 527)

[node name="Marker2D_start" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle1_left"]
position = Vector2(-289, 199)

[node name="Node2D_tentacle2_left" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side"]
z_index = -3
position = Vector2(68, -17)

[node name="Line2D_outline" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle2_left"]
z_index = -1
points = PackedVector2Array(-270, 180)
width = 25.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.501991, 0.191443, 0.330004, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle2_left"]
points = PackedVector2Array(-270, 180)
width = 15.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.776471, 0.356863, 0.537255, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D_end" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle2_left"]
position = Vector2(-306, 629)

[node name="Marker2D_start" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle2_left"]
position = Vector2(-306, 204)

[node name="Node2D_tentacle3_left" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side"]
z_index = -2
position = Vector2(136, -51)

[node name="Line2D_outline" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle3_left"]
z_index = -1
points = PackedVector2Array(-270, 180)
width = 25.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.501991, 0.191443, 0.330004, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle3_left"]
points = PackedVector2Array(-270, 180)
width = 15.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.776471, 0.356863, 0.537255, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D_end" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle3_left"]
position = Vector2(-323, 748)

[node name="Marker2D_start" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle3_left"]
position = Vector2(-323, 221)

[node name="Node2D_tentacle4_left" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side"]
z_index = -1
position = Vector2(204, -68)

[node name="Line2D_outline" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle4_left"]
z_index = -1
points = PackedVector2Array(-270, 180)
width = 25.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.501991, 0.191443, 0.330004, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle4_left"]
points = PackedVector2Array(-270, 180)
width = 15.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.776471, 0.356863, 0.537255, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D_end" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle4_left"]
position = Vector2(-323, 833)

[node name="Marker2D_start" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle4_left"]
position = Vector2(-323, 216)

[node name="Node2D_tentacle5_left" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side"]
position = Vector2(204, -68)

[node name="Line2D_outline" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle5_left"]
z_index = -1
points = PackedVector2Array(-270, 180)
width = 25.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.501991, 0.191443, 0.330004, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle5_left"]
points = PackedVector2Array(-270, 180)
width = 15.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.776471, 0.356863, 0.537255, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D_end" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle5_left"]
position = Vector2(-255, 901)

[node name="Marker2D_start" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_left_side/Node2D_tentacle5_left"]
position = Vector2(-255, 204)

[node name="Node2D_right_side" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles"]

[node name="Node2D_tentacle1_right" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side"]
z_index = -4
position = Vector2(595, 0)

[node name="Line2D_outline" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle1_right"]
z_index = -1
points = PackedVector2Array(-270, 180)
width = 25.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.501991, 0.191443, 0.330004, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle1_right"]
points = PackedVector2Array(-270, 180)
width = 15.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.776471, 0.356863, 0.537255, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D_end" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle1_right"]
position = Vector2(-289, 510)

[node name="Marker2D_start" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle1_right"]
position = Vector2(-306, 199)

[node name="Node2D_tentacle2_right" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side"]
z_index = -3
position = Vector2(459, -34)

[node name="Line2D_outline" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle2_right"]
z_index = -1
points = PackedVector2Array(-270, 180)
width = 25.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.501991, 0.191443, 0.330004, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle2_right"]
points = PackedVector2Array(-270, 180)
width = 15.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.776471, 0.356863, 0.537255, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D_end" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle2_right"]
position = Vector2(-221, 629)

[node name="Marker2D_start" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle2_right"]
position = Vector2(-221, 221)

[node name="Node2D_tentacle3_right" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side"]
z_index = -2
position = Vector2(510, -68)

[node name="Line2D_outline" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle3_right"]
z_index = -1
points = PackedVector2Array(-270, 180)
width = 25.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.501991, 0.191443, 0.330004, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle3_right"]
points = PackedVector2Array(-270, 180)
width = 15.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.776471, 0.356863, 0.537255, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D_end" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle3_right"]
position = Vector2(-323, 765)

[node name="Marker2D_start" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle3_right"]
position = Vector2(-323, 238)

[node name="Node2D_tentacle4_right" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side"]
z_index = -1
position = Vector2(425, 68)

[node name="Line2D_outline" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle4_right"]
z_index = -1
points = PackedVector2Array(-270, 180)
width = 25.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.501991, 0.191443, 0.330004, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle4_right"]
points = PackedVector2Array(-270, 180)
width = 15.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.776471, 0.356863, 0.537255, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D_end" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle4_right"]
position = Vector2(-306, 714)

[node name="Marker2D_start" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle4_right"]
position = Vector2(-306, 80)

[node name="Node2D_tentacle5_left" type="Node2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side"]
z_index = 1
position = Vector2(306, -68)

[node name="Line2D_outline" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle5_left"]
z_index = -1
points = PackedVector2Array(-270, 180)
width = 25.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.501991, 0.191443, 0.330004, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D" type="Line2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle5_left"]
points = PackedVector2Array(-270, 180)
width = 15.0
width_curve = SubResource("Curve_7lu5h")
default_color = Color(0.776471, 0.356863, 0.537255, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="Marker2D_end" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle5_left"]
position = Vector2(-255, 918)

[node name="Marker2D_start" type="Marker2D" parent="Node2D_visuals/Node2D_Lines_tentacles/Node2D_right_side/Node2D_tentacle5_left"]
position = Vector2(-255, 204)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
